2007-11-28  Mathias Hasselmann  <mathias@openismus.com>

	Publish the playlist as dynamic ZeroConf bookmark.

	* src/plugins/publish/totem-publish.c: Use epc_publisher_add_bookmark.

2007-11-28  Mathias Hasselmann  <mathias@openismus.com>

	epc_shell_expand_name was renamed to epc_publisher_expand_name.

	* src/plugins/publish/totem-publish.c: Use epc_publisher_expand_name.

2007-11-28  Mathias Hasselmann  <mathias@openismus.com>

	Preserve playlist order when publishing them.

	* src/plugins/publish/totem-publish.c: Add playlist field to
	TotemPublishPlugin and update it on "changed" signals.

2007-11-28  Mathias Hasselmann  <mathias@openismus.com>

	Take care not to vanish service name placeholders.

	* src/plugins/publish/totem-publish.c: Take care about placeholders.

2007-11-27  Mathias Hasselmann  <mathias@openismus.com>

	Don't list ourself in the neighbours sidepane. Show progress window
	when generating server keys. Expand service name.

	* src/plugins/publish/totem-publish.c: Set "skip-our-own" property
	of the service monitor. Call epc_progress_window_install and
	epc_shell_expand_name.

2007-11-24  Mathias Hasselmann  <mathias@openismus.com>

	Implement browsing of nearby Totem instances and playlist download.

	* data/publish-plugin.glade, data/publish-plugin.ui: Add
	"neighbours" sidepane for finding nearby Totem instances.
	* src/plugins/publish/totem-publish.c: Implement "neighbours"
	sidepane and playlist download.

2007-11-24  Mathias Hasselmann  <mathias@openismus.com>

	Add service monitor for finding other Totem instances.

	* src/plugins/publish/totem-publish.c: Add service monitor.

2007-11-24  Mathias Hasselmann  <mathias@openismus.com>

	Resync with libepc trunk.

	* src/plugins/publish/totem-publish.c: Adopt to new memory management.

2007-11-22  Mathias Hasselmann  <mathias@openismus.com>

	Implement server side of the publish plugin.

	* src/plugins/publish/Makefile.am: Update include folders.